bug fix for text issue and text alignment #731 and #724

--- a/src/components/SearchBar/index.css
+++ b/src/components/SearchBar/index.css
@@ -10,3 +10,9 @@
   align-items: center;
   justify-content: center;
 }
+
+.text-color-white{
+  color: var(--color);
+
+}
+
